ocultar secion para  navegar en ellas

--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -27,4 +27,12 @@ body{
     width: 95%;
     margin: 0 auto;
     padding-top: $separacion / 2 ;
+
+    .seccion{
+        display: none;
+        margin-top: $separacion / 2;
+        &:first-of-type{
+            display: block;
+        }
+    }
 }
