Js para navegar entre id-tabs y secciones

--- a/src/scss/layout/_tabs.scss
+++ b/src/scss/layout/_tabs.scss
@@ -10,6 +10,11 @@
        text-transform: uppercase;
        border: none;
 
+        &:hover{
+            background-color: $azul ;
+            color: $blanco;
+        }
+
        &:hover{
            cursor: pointer;
        }
