--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -31,8 +31,12 @@ body{
     .seccion{
         display: none;
         margin-top: $separacion / 2;
-        &:first-of-type{
-            display: block;
-        }
+        // &:first-of-type{
+        //     display: block;
+        // }
     }
+}
+
+.mostrar-seccion{
+    display: block!important;
 }
