--- a/src/scss/layout/_paginacion.scss
+++ b/src/scss/layout/_paginacion.scss
@@ -2,7 +2,7 @@
 
     display: flex;
     justify-content: space-between;
-    margin-top: 2rem;
+    padding: $separacion/2 0;
 
     button{
         background-color: $azul;
@@ -14,6 +14,11 @@
         font-weight: $bold;
         font-size: 2rem;
         text-transform: uppercase;
+
+        
+        &.ocultar{
+            visibility: hidden;
+        }
 
         &:hover{
            cursor: pointer; 
