--- a/src/scss/layout/_formulario.scss
+++ b/src/scss/layout/_formulario.scss
@@ -17,6 +17,16 @@
         border-radius: 1rem;
         border: none;
     }
+}
 
+.alerta{
+    padding: $separacion / 2;
+    text-align: center;
+    color: $blanco;
+    width: 100%;
+    display: block;
 
+    &.error{
+        background-color: rgb(194, 0, 0);
+    }
 }
