Validar las horas

--- a/src/scss/layout/_formulario.scss
+++ b/src/scss/layout/_formulario.scss
@@ -17,6 +17,17 @@
         border-radius: 1rem;
         border: none;
     }
+
+    p{
+       display: block;
+       align-items: center; 
+       margin-left: 2rem;
+    }
+   
+}
+
+.horario{
+    color: red;
 }
 
 .alerta{
